force-app/main/default/objects/Referral_Contact__c/Referral_Contact__c.object-meta.xml
<CustomObject>
    <label>Referral Contact</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referral Contacts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>