force-app/main/default/objects/Referral_Contact__c/fields/Admin_CPA__c.field-meta.xml
<CustomField>
    <fullName>Admin_CPA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admin CPA</label>
    <type>Checkbox</type>
</CustomField>