force-app/main/default/objects/Referral_Contact__c/fields/AICPA_Latest_Campaign__c.field-meta.xml
<CustomField>
    <fullName>AICPA_Latest_Campaign__c</fullName>
    <description>Case 29554349 - place to hold campaign name coming in from AICPA web site email</description>
    <encryptionScheme>None</encryptionScheme>
    <label>AICPA Latest Campaign</label>
    <length>100</length>
    <type>Text</type>
</CustomField>