force-app/main/default/objects/Referral_Contact__c/fields/AICPA_Original_Type__c.field-meta.xml
<CustomField>
    <fullName>AICPA_Original_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Referral Type at the time AICPA Enrolled was checked, initially set via a data load from WAR, will be automatically set as the date AICPA Enrolled is checked
relabeled case 29554349 - set by code based on AICPA campaign</inlineHelpText>
    <label>AICPA Integration Source</label>
    <length>200</length>
    <type>Text</type>
</CustomField>