force-app/main/default/objects/Referral_Contact__c/fields/Binder_Date__c.field-meta.xml
<CustomField>
    <fullName>Binder_Date__c</fullName>
    <description>Date Binder was presented</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Binder Date</label>
    <type>Date</type>
</CustomField>