force-app/main/default/objects/Referral_Contact__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>Referral_Account__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulled from the Referral Account</inlineHelpText>
    <label>Referral Account City</label>
    <type>Text</type>
</CustomField>