force-app/main/default/objects/Referral_Contact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact Referred</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Referral_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>