force-app/main/default/objects/Referral_Contact__c/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <description>This number is initially populated by the ID from WAR. Going forward this number is auto generated from the contact</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Contact ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>