force-app/main/default/objects/Referral_Contact__c/fields/CPA_portal_shared__c.field-meta.xml
<CustomField>
    <fullName>CPA_portal_shared__c</fullName>
    <label>CPA portal shared client access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>