force-app/main/default/objects/Referral_Contact__c/fields/CPA_Program_status__c.field-meta.xml
<CustomField>
    <fullName>CPA_Program_status__c</fullName>
    <label>CPA Program status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Unenrolled/no longer in Program</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>