force-app/main/default/objects/Referral_Contact__c/fields/CPA_Referral_Score__c.field-meta.xml
<CustomField>
    <fullName>CPA_Referral_Score__c</fullName>
    <label>CPA Referral Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>