force-app/main/default/objects/Referral_Contact__c/fields/CPA_Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>CPA_Relationship_Manager__c</fullName>
    <formula>Referral_Account__r.CPA_Relationship_Manager__r.FirstName &amp; &quot; &quot; &amp; Referral_Account__r.CPA_Relationship_Manager__r.LastName</formula>
    <inlineHelpText>Pulled from the Accountant Business Development Manager (ABDM) field on the Referral Account</inlineHelpText>
    <label>Accountant Business Development Manager</label>
    <type>Text</type>
</CustomField>