force-app/main/default/objects/Referral_Contact__c/fields/Customer_Key_Points__c.field-meta.xml
<CustomField>
    <fullName>Customer_Key_Points__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Key Points</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>