force-app/main/default/objects/Referral_Contact__c/fields/Date_AKC_Registered__c.field-meta.xml
<CustomField>
    <fullName>Date_AKC_Registered__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date AKC Registered</label>
    <type>Date</type>
</CustomField>