force-app/main/default/objects/Referral_Contact__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Used for personal or biographical notes or information</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>