force-app/main/default/objects/Referral_Contact__c/fields/DGType__c.field-meta.xml
<CustomField>
    <fullName>DGType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What type of Data Governance check we&apos;re going to perform on this record.</inlineHelpText>
    <label>DG Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>