force-app/main/default/objects/Referral_Contact__c/fields/Downloaded_Paychex_Icon__c.field-meta.xml
<CustomField>
    <fullName>Downloaded_Paychex_Icon__c</fullName>
    <inlineHelpText>Once you answer this quesiton, you may not reschedule the Explore Paychex meeting into the future, you will receive an error.  

If you need to reschedule the Explore Paychex meeting, then remove this answer until after that meeting.</inlineHelpText>
    <label>Downloaded Paychex Icon</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attempted-Completed</fullName>
            </value>
            <value>
                <fullName>Attempted-Refused</fullName>
            </value>
            <value>
                <fullName>Attempted-Postponed</fullName>
            </value>
            <value>
                <fullName>Not Attempted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>