force-app/main/default/objects/Referral_Contact__c/fields/Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this field if referral contact refuses to provide email address or does not want email communications</inlineHelpText>
    <label>Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>