force-app/main/default/objects/Referral_Contact__c/fields/Email_Reason__c.field-meta.xml
<CustomField>
    <fullName>Email_Reason__c</fullName>
    <description>Any additional information we have about this email change.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Any additional information we have about this email change.</inlineHelpText>
    <label>Email Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>