force-app/main/default/objects/Referral_Contact__c/fields/Employee_Number__c.field-meta.xml
<CustomField>
    <fullName>Employee_Number__c</fullName>
    <description>Internal Employee number from the banks, used in matching for incoming Tier 1 Bank Leads to find correct referral contact to link lead to</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Employee Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>