force-app/main/default/objects/Referral_Contact__c/fields/End_Date_Reason__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Reason__c</fullName>
    <label>End Date Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>No Longer with Company</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Do Not Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>