force-app/main/default/objects/Referral_Contact__c/fields/Explore_2_Date__c.field-meta.xml
<CustomField>
    <fullName>Explore_2_Date__c</fullName>
    <description>The date of the Paychex Explore 2 meeting.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date of the Paychex Explore 2 meeting.</inlineHelpText>
    <label>Explore 2 Date</label>
    <type>Date</type>
</CustomField>