force-app/main/default/objects/Referral_Contact__c/fields/Explore_Date__c.field-meta.xml
<CustomField>
    <fullName>Explore_Date__c</fullName>
    <description>The Date the of Event for the Explore Paychex program presentation.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Explore Date</label>
    <type>Date</type>
</CustomField>