force-app/main/default/objects/Referral_Contact__c/fields/Explore_Paychex__c.field-meta.xml
<CustomField>
    <fullName>Explore_Paychex__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>*** must be completed ***
Valid Email Address 
Number of Business Clients
Downloaded Paychex Icon</inlineHelpText>
    <label>Explore Paychex</label>
    <type>Checkbox</type>
</CustomField>