force-app/main/default/objects/Referral_Contact__c/fields/External_Wholesaler_Contact_Owner__c.field-meta.xml
<CustomField>
    <fullName>External_Wholesaler_Contact_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Wholesaler Contact Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Referral_Contacts4</relationshipName>
    <type>Lookup</type>
</CustomField>