force-app/main/default/objects/Referral_Contact__c/fields/FINS__c.field-meta.xml
<CustomField>
    <fullName>FINS__c</fullName>
    <description>Fins Number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>FINS#</label>
    <length>20</length>
    <type>Text</type>
</CustomField>