force-app/main/default/objects/Referral_Contact__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Referral Contact First Name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>