force-app/main/default/objects/Referral_Contact__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>not really used anywhere, probably can be deleted</description>
    <formula>LEFT(TRIM(Name),FIND(&quot; &quot;,TRIM(Name))-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FirstName</label>
    <type>Text</type>
</CustomField>