force-app/main/default/objects/Referral_Contact__c/fields/Group_number__c.field-meta.xml
<CustomField>
    <fullName>Group_number__c</fullName>
    <description>Group code used to organize cpa activities by a common relationship</description>
    <inlineHelpText>Group code used to organize cpa activities by a common relationship</inlineHelpText>
    <label>Group #</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>J</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>