force-app/main/default/objects/Referral_Contact__c/fields/Has_Sensitivity_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Has_Sensitivity_Payroll__c</fullName>
    <formula>false</formula>
    <inlineHelpText>Does this referral contact have payroll sensitivity?</inlineHelpText>
    <label>Has Sensitivity-Payroll</label>
    <type>Checkbox</type>
</CustomField>