force-app/main/default/objects/Referral_Contact__c/fields/HNBF_Contact_Owner__c.field-meta.xml
<CustomField>
    <fullName>HNBF_Contact_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>HNBF Contact Owner</description>
    <label>HNBF Contact Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Referral_Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>