force-app/main/default/objects/Referral_Contact__c/fields/Hold_Out__c.field-meta.xml
<CustomField>
    <fullName>Hold_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this flag if you do not want the ownership to change.</inlineHelpText>
    <label>Hold Out</label>
    <type>Checkbox</type>
</CustomField>