force-app/main/default/objects/Referral_Contact__c/fields/HR_Person_ID__c.field-meta.xml
<CustomField>
    <fullName>HR_Person_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HR Person ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>