force-app/main/default/objects/Referral_Contact__c/fields/HRS_Contact_Owner__c.field-meta.xml
<CustomField>
    <fullName>HRS_Contact_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>HRS owner of the referral contact per NSS zip code assgnment</description>
    <label>HRS Contact Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N70000002EpQSEA0</relationshipName>
    <type>Lookup</type>
</CustomField>