force-app/main/default/objects/Referral_Contact__c/fields/Initial_Referral_Type__c.field-meta.xml
<CustomField>
    <fullName>Initial_Referral_Type__c</fullName>
    <description>Initial Referral Type is being populated for the Explore Paychex program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Initial Referral Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>