force-app/main/default/objects/Referral_Contact__c/fields/Internal_Wholesaler_Contact_Owner__c.field-meta.xml
<CustomField>
    <fullName>Internal_Wholesaler_Contact_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Wholesaler Contact Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Referral_Contacts5</relationshipName>
    <type>Lookup</type>
</CustomField>