force-app/main/default/objects/Referral_Contact__c/fields/Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date__c</fullName>
    <description>formula field to display the date of the Last activity linked to this record
case #25446236</description>
    <formula>LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Activity Date</label>
    <type>Date</type>
</CustomField>