force-app/main/default/objects/Referral_Contact__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>not really used anywhere, probably can be deleted</description>
    <formula>RIGHT(TRIM(Name),LEN(TRIM(Name) )-FIND(&quot; &quot;,TRIM(Name)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LastName</label>
    <type>Text</type>
</CustomField>