force-app/main/default/objects/Referral_Contact__c/fields/LatestCampaign__c.field-meta.xml
<CustomField>
    <fullName>LatestCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The campaign loaded from Lead Loader</description>
    <label>Latest Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Referral Contacts</relationshipLabel>
    <relationshipName>Referral_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>