force-app/main/default/objects/Referral_Contact__c/fields/LoadCampaignPrev__c.field-meta.xml
<CustomField>
    <fullName>LoadCampaignPrev__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The most recent value of the Load Campaign field that came through the lead loader.</inlineHelpText>
    <label>Load Campaign Prev</label>
    <length>18</length>
    <type>Text</type>
</CustomField>