force-app/main/default/objects/Referral_Contact__c/fields/Mailing_Country__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>