force-app/main/default/objects/Referral_Contact__c/fields/Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing Street</label>
    <type>TextArea</type>
</CustomField>