force-app/main/default/objects/Referral_Contact__c/fields/MMS_Contact_Owner__c.field-meta.xml
<CustomField>
    <fullName>MMS_Contact_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MMS Contact Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Referral_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>