force-app/main/default/objects/Referral_Contact__c/fields/No_Longer_With_Company__c.field-meta.xml
<CustomField>
    <fullName>No_Longer_With_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Longer With Company</label>
    <type>Checkbox</type>
</CustomField>