force-app/main/default/objects/Referral_Contact__c/fields/Number_of_Payroll_Clients__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Payroll_Clients__c</fullName>
    <description>Case 27539533</description>
    <inlineHelpText>How many clients do you process payroll for? (zero if they don&apos;t process payroll)</inlineHelpText>
    <label># of Clients You Process Payroll For</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>