force-app/main/default/objects/Referral_Contact__c/fields/Opportunities_to_Refer_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_to_Refer_Last_12_Months__c</fullName>
    <description>Case 27539533</description>
    <inlineHelpText>How many times have you had the opportunity to refer a client for payroll in the last 12 months?</inlineHelpText>
    <label>Opportunities to Refer - Last 12 Months</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>