force-app/main/default/objects/Referral_Contact__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>Case 27539533</description>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Profiled</fullName>
            </value>
            <value>
                <fullName>Postponed/Scheduled after Tax Season</fullName>
            </value>
            <value>
                <fullName>Could not Contact - Attempted 3+ Times</fullName>
            </value>
            <value>
                <fullName>Loyal to competitor</fullName>
            </value>
            <value>
                <fullName>Firm processes payroll</fullName>
            </value>
            <value>
                <fullName>Unable to Engage</fullName>
            </value>
            <value>
                <fullName>Poor experience with Paychex</fullName>
            </value>
            <value>
                <fullName>No longer with company</fullName>
            </value>
            <value>
                <fullName>Not a decision maker</fullName>
            </value>
            <value>
                <fullName>Doesn’t serve business clients</fullName>
            </value>
            <value>
                <fullName>Acquired by Payroll Company</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>