force-app/main/default/objects/Referral_Contact__c/fields/Pay_Providers_Referred_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Pay_Providers_Referred_Last_12_Months__c</fullName>
    <description>Case 27539533</description>
    <inlineHelpText>Which payroll providers have you referred in the last 12 months?</inlineHelpText>
    <label>Pay Providers Referred - Last 12 Months</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paychex</fullName>
            </value>
            <value>
                <fullName>ADP</fullName>
            </value>
            <value>
                <fullName>Ceridian</fullName>
            </value>
            <value>
                <fullName>Gusto</fullName>
            </value>
            <value>
                <fullName>Heartland/Ovation</fullName>
            </value>
            <value>
                <fullName>Intuit/Quickbooks</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Paycom</fullName>
            </value>
            <value>
                <fullName>Paycor</fullName>
            </value>
            <value>
                <fullName>Paylocity</fullName>
            </value>
            <value>
                <fullName>Payroll1</fullName>
            </value>
            <value>
                <fullName>Sure Payroll</fullName>
            </value>
            <value>
                <fullName>Zenefits</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>