force-app/main/default/objects/Referral_Contact__c/fields/Paychex_Flex__c.field-meta.xml
<CustomField>
    <fullName>Paychex_Flex__c</fullName>
    <defaultValue>false</defaultValue>
    <description>From case 18538580, manually filled in by sales/marketing users.</description>
    <inlineHelpText>Check this box if a Flex presentation was given.</inlineHelpText>
    <label>Paychex Flex</label>
    <type>Checkbox</type>
</CustomField>