force-app/main/default/objects/Referral_Contact__c/fields/Preferred_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Method__c</fullName>
    <description>Case 27539533</description>
    <inlineHelpText>Is there one provider that you recommend more than others?</inlineHelpText>
    <label>Top Recommended Payroll Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 ADP</fullName>
            </value>
            <value>
                <fullName>2 CERIDIAN</fullName>
            </value>
            <value>
                <fullName>3 PAYROLL 1</fullName>
            </value>
            <value>
                <fullName>4 INTERPAY</fullName>
            </value>
            <value>
                <fullName>5 INHOUSE</fullName>
            </value>
            <value>
                <fullName>6 INTUIT/QUICKBKS</fullName>
            </value>
            <value>
                <fullName>7 BANKS</fullName>
            </value>
            <value>
                <fullName>8 CPA</fullName>
            </value>
            <value>
                <fullName>9 MANUAL</fullName>
            </value>
            <value>
                <fullName>10 LOCAL</fullName>
            </value>
            <value>
                <fullName>11 PAYCHEX</fullName>
            </value>
            <value>
                <fullName>Thomson Reuters</fullName>
            </value>
            <value>
                <fullName>Paychex</fullName>
            </value>
            <value>
                <fullName>ADP</fullName>
            </value>
            <value>
                <fullName>Ceridian</fullName>
            </value>
            <value>
                <fullName>Gusto</fullName>
            </value>
            <value>
                <fullName>Heartland/Ovation</fullName>
            </value>
            <value>
                <fullName>Intuit/Quickbooks</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Paycom</fullName>
            </value>
            <value>
                <fullName>Paycor</fullName>
            </value>
            <value>
                <fullName>Paylocity</fullName>
            </value>
            <value>
                <fullName>Payroll1</fullName>
            </value>
            <value>
                <fullName>Sure Payroll</fullName>
            </value>
            <value>
                <fullName>Zenefits</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>No Preference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>