force-app/main/default/objects/Referral_Contact__c/fields/Premier_PBS_Contact_Owner__c.field-meta.xml
<CustomField>
    <fullName>Premier_PBS_Contact_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Premier-PBS Contact Owner per NSS zip code assignment rules</description>
    <label>HR Services Contact Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N70000002EpQrEAK</relationshipName>
    <type>Lookup</type>
</CustomField>