force-app/main/default/objects/Referral_Contact__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To allow field sales users to indicate the primary contact at the referral source firm.</description>
    <label>Primary Contact</label>
    <type>Checkbox</type>
</CustomField>