force-app/main/default/objects/Referral_Contact__c/fields/PrimaryReferralTypeMismatch__c.field-meta.xml
<CustomField>
    <fullName>PrimaryReferralTypeMismatch__c</fullName>
    <formula>OR (TEXT(PrimaryReferralType__c) !=  Referral_Account__r.DefaultCtctPrimaryType__c
     ,TEXT(PrimaryReferralType__c) !=  TEXT(Contact__r.PrimaryReferralType__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Referral Type Mismatch</label>
    <type>Checkbox</type>
</CustomField>