force-app/main/default/objects/Referral_Contact__c/fields/Profiled__c.field-meta.xml
<CustomField>
    <fullName>Profiled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Profiled</label>
    <type>Checkbox</type>
</CustomField>