force-app/main/default/objects/Referral_Contact__c/fields/Profiled_Date__c.field-meta.xml
<CustomField>
    <fullName>Profiled_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Profiled Date</label>
    <type>Date</type>
</CustomField>