force-app/main/default/objects/Referral_Contact__c/fields/Referral_Account__c.field-meta.xml
<CustomField>
    <fullName>Referral_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Referral_Account__c.End_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <infoMessage>Search results exclude records with an end date.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Referral_Account__c</referenceTo>
    <relationshipLabel>Referral Contacts</relationshipLabel>
    <relationshipName>Referral_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>