force-app/main/default/objects/Referral_Contact__c/fields/Referral_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Referral_Full_Name__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Full Name</label>
    <type>Text</type>
</CustomField>