force-app/main/default/objects/Referral_Contact__c/fields/Referral_ID__c.field-meta.xml
<CustomField>
    <fullName>Referral_ID__c</fullName>
    <description>WAR Referral Source ID Number</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Referral ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>